--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
   full-test:
     strategy:
       matrix:
-        os: [ubuntu-22.04]
+        os: [ubuntu-24.04]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 40
     steps:
@@ -24,5 +24,5 @@ jobs:
     - name: check with latest Ubuntu development version
       run: |
         # skip check on latest Ubuntu stable release with incus, because there may be no such available image
-        (! which incus) || exit 0
-        sudo -u $USER env -C perftest ./create_template_image ubuntu:$(distro-info -s)
+        which incus || exit 0
+        sudo -u $USER env -C perftest ./create_template_image images:ubuntu/$(distro-info -s)/cloud
